--- a/styles/style.scss
+++ b/styles/style.scss
@@ -612,7 +612,7 @@ body.open:after {
   }
 
   .owl-carousel .owl-nav button.owl-prev {
-    background-color: #707070;
+    // background-color: #707070;
     color: #fff;
     border: none;
     padding: 0 !important;
@@ -620,14 +620,15 @@ body.open:after {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 0;
+    left: 2%;
     height: 100px;
     width: 45px;
-    font-size: 36px;
+    font-size: 66px;
+    outline: none;
   }
 
   .owl-carousel .owl-nav button.owl-next {
-    background-color: #707070;
+    // background-color: #707070;
     color: #ffff;
     border: none;
     padding: 0 !important;
@@ -635,10 +636,12 @@ body.open:after {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 0;
+    right: 2%;
     height: 100px;
     width: 45px;
-    font-size: 36px;
+    font-size: 66px;
+    outline: none;
+
   }
 }
 
@@ -1135,10 +1138,17 @@ body.open:after {
   .section4 .main .high .slide {
     .content {
       text-align: center;
+      .contact {
+        font-size: 20px;
+      }
+      .social img {
+        height: 30px;
+        margin-left: 10px;
+      }
     }
   }
   .section4 .main .high .slide {
-    height: 50vh;
+    height: 30vh;
   }
 }
 
