--- a/styles/style.scss
+++ b/styles/style.scss
@@ -580,32 +580,32 @@ body.open:after {
     }
 
     .b1 {
-      background: url("/img/Carousel\ \(18\).png");
+      background: url("/img/Carousel\ \(18\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
     .b2 {
-      background: url("/img/Carousel\ \(28\).png");
+      background: url("/img/Carousel\ \(28\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
     .b3 {
-      background: url("/img/Carousel\ \(9\).png");
+      background: url("/img/Carousel\ \(9\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
     .b4 {
-      background: url("/img/Carousel\ \(29\).png");
+      background: url("/img/Carousel\ \(29\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
     .b5 {
-      background: url("/img/Carousel\ \(2\).png");
+      background: url("/img/Carousel\ \(2\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
     .b6 {
-      background: url("/img/Carousel\ \(21\).png");
+      background: url("/img/Carousel\ \(21\).jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -837,7 +837,7 @@ body.open:after {
     }
   }
   .owl-carousel .owl-nav button.owl-prev {
-    background-color: #000000;
+    // background-color: #000000;
     color: #fff;
     border: none;
     padding: 0 !important;
@@ -848,11 +848,13 @@ body.open:after {
     left: 0;
     height: 70px;
     width: 45px;
-    font-size: 36px;
+    font-size: 52px;
+    outline: none;
+    text-shadow: 0px 0px 8px black;
   }
 
   .owl-carousel .owl-nav button.owl-next {
-    background-color: #000000;
+    // background-color: #000000;
     color: #fff;
     border: none;
     padding: 0 !important;
@@ -863,7 +865,10 @@ body.open:after {
     right: 0;
     height: 70px;
     width: 45px;
-    font-size: 36px;
+    font-size: 52px;
+    outline: none;
+    text-shadow: 0px 0px 8px black;
+
   }
 }
 
