--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -737,7 +738,7 @@ body.open:after {
   margin: 1rem auto 0;
   line-height: 1.5;
   color: #666666;
-  margin-bottom: 78px;
+  margin-bottom: 48px;
 }
 
 .section2 .main .heading h3 span {
@@ -749,6 +750,16 @@ body.open:after {
   font-size: 20px;
   margin: 1rem auto 0;
   color: #888888;
+}
+
+.iframe-container {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media only screen and (max-width: 770px) {
@@ -772,6 +783,19 @@ body.open:after {
   }
   .section2 .main .heading p {
     font-size: 5vw;
+  }
+  .iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -1086,6 +1110,15 @@ body.open:after {
   padding-bottom: 60px;
 }
 
+.section4 .main .high .slide p.person {
+  color: #888888;
+  font-size: 20px;
+}
+
+.section4 .main .high .slide p.person span {
+  font-weight: bold;
+}
+
 .section4 .main .high .slide p.contact {
   color: #888888;
   font-size: 28px;
@@ -1190,7 +1223,7 @@ body.open:after {
     margin-left: 10px;
   }
   .section4 .main .high .slide {
-    height: 30vh;
+    height: 45vh;
   }
 }
 
@@ -1280,6 +1313,9 @@ body.open:after {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+  }
+  .section8 .heading h3 {
+    font-size: 1.8rem;
   }
 }
 
@@ -1551,23 +1587,6 @@ footer .coloumn i + i {
   padding: 0 0.5em;
 }
 
-footer .gotop {
-  float: right;
-  height: 40px;
-  width: 50px;
-  background-color: #616161;
-  border-radius: 6px;
-  margin-top: -100px;
-  color: #fff;
-  font-size: 1.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
 footer .gotop a {
   text-decoration: none;
   color: black;
@@ -1590,5 +1609,24 @@ footer .gotop a {
   footer .gotop {
     margin-top: -140px;
   }
+}
+
+a.go-top {
+  position: fixed;
+  bottom: 2.5em;
+  right: 2em;
+  text-decoration: none;
+  color: white;
+  background-color: #616161;
+  opacity: 0.6;
+  border-radius: 6px;
+  font-size: 12px;
+  padding: 1em 1.5em;
+  display: none;
+  z-index: 1000;
+}
+
+.go-top:hover {
+  background-color: rgba(0, 0, 0, 0.6);
 }
 /*# sourceMappingURL=style.css.map */
