--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1147,6 +1147,7 @@ body.open:after {
 @media only screen and (max-width: 420px) {
   .section4 .main .heading {
     max-width: 75vw;
+    margin-bottom: 3rem;
   }
   .section4 .main .heading h3 {
     font-size: 10vw;
@@ -1161,6 +1162,7 @@ body.open:after {
       width: 100%;
       border-left: none;
       flex-direction: column;
+      margin-top: 1rem;
       .visit {
         margin-left: 0px;
         margin-top: 30px;
